- removed unused configuration util code that was replaced with Spring - generics added to collections where needed